# coffin299-Hyper-AI-Agent

./: .dockerignore  .env.docker.example  .env.example  .gitignore  CHANGELOG.md  Dockerfile  NOTICE  README.md  README_BACKEND_BUILD.md  README_DESKTOP.md  README_DOCKER.md  README_LOCAL_BUILD.md  TROUBLESHOOT_NATIVE.md  backend.spec  build-backend-nuitka-cache.bat  build-local.bat  build-local.sh  deploy-docker.sh  docker-compose.yml  electron.js  generate_notice.bat  linux-build-backend.sh  macos-build-backend.sh  package.json  preload.js  pyproject.toml  regenerate_icons.ps1  requirements.txt  run_native.bat  setup.py  setup_native.bat  windows-build-backend.bat
.github/workflows/: android-build.yml  desktop-build.yml  release.yml
frontend/: npm-shrinkwrap.json  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.tsx  index.css
hyper_ai_agent_backend/: __init__.py
mobile/: .eslintrc.js  App.tsx  README.md  package-lock.json  package.json  tsconfig.json
mobile/android/: build.gradle  gradle.properties  settings.gradle
mobile/patches/: react-native-screens+3.37.0.patch
scripts/: build_backend.ps1  build_backend.sh
src/: __init__.py  main.py
src/api/: server.py
src/core/: agent.py  config.py  database.py  init_db.py  keystore.py  models.py
src/providers/: anthropic_provider.py  base.py  gemini_provider.py  grok_provider.py  native_local_provider.py  nvidia_nim_provider.py  ollama_provider.py  openai_provider.py  openrouter_provider.py  registry.py
src/services/: automation_service.py  calendar_service.py  chat_service.py  conversation_service.py  discord_service.py  document_service.py  email_service.py  embedding_service.py  google_service.py  line_service.py  media_service.py  meeting_service.py  memory_service.py  model_service.py  ocr_service.py  provider_manager.py  role_service.py  slack_service.py  summarization_service.py  (+2 more)
tools/: generate_notice.py
(+61 files in other folders)
